comentar y bajar complejidad a algunas clases